--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
     <h2>Introduction</h2>
 
-    <p>My name is Brian Ho, my student number is s3898120, my student email address is s3898120@student.rmit.edu.au, - insert picture here - . I was born and raised in Melbourne, my parents are from South Vietnam, my education to date is that I recently completed year 12 VCE in 2020, completed CERT III in Information Digital Technology and now studying Associate of Information Technology Pathway to Bachelor of Information Technology, I can speak English and Vietnamese. One fact that is interesting about me is I am hands on, meaning that apart from being on the computer I like to gardening. I have a pet goldfish as well and also like to go cycling.</p>
+    <p>My name is Brian Ho, my student number is s3898120, my student email address is s3898120@student.rmit.edu.au, </article> img src="folder/photo.jpg" alt=""/>
+    </article>
+ I was born and raised in Melbourne, my parents are from Vietnam, my education to date is that I recently completed year 12 VCE in 2020, completed CERT III in Information Digital Technology and now studying Associate of Information Technology Pathway to Bachelor of Information Technology, I can speak English and Vietnamese. One fact that is interesting about me is I am hands on, meaning that apart from being on the computer I like to gardening. I have a pet goldfish as well and also like to go cycling.</p>
+
+
+    <p></p>
 
   </body>
 </html>
