--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
     <h2>Introduction</h2>
 
-    <p>My name is Brian Ho, my student number is s3898120, my student email address is s3898120@student.rmit.edu.au, </article> img src="folder/photo.jpg" alt=""/>
-    </article>
- I was born and raised in Melbourne, my parents are from Vietnam, my education to date is that I recently completed year 12 VCE in 2020, completed CERT III in Information Digital Technology and now studying Associate of Information Technology Pathway to Bachelor of Information Technology, I can speak English and Vietnamese. One fact that is interesting about me is I am hands on, meaning that apart from being on the computer I like to gardening. I have a pet goldfish as well and also like to go cycling.</p>
+    <p>My name is Brian Ho, my student number is s3898120, my student email address is s3898120@student.rmit.edu.au</p>
+    <img src="photo.jpg" alt="">
+
+    <p>I was born and raised in Melbourne, my parents are from Vietnam, my education to date is that I recently completed year 12 VCE in 2020, completed CERT III in Information Digital Technology and now studying Associate of Information Technology Pathway to Bachelor of Information Technology, I can speak English and Vietnamese. One fact that is interesting about me is I am hands on, meaning that apart from being on the computer I like to gardening. I have a pet goldfish as well and also like to go cycling.</p>
+
+    <p>My interest in IT is hardware, networking aka cabling. My interest in IT started when I was in primary school during year 6. There was a particular person who sparked my interest, which was the IT repair man</p>
 
 
     <p></p>
