--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <p>I was born and raised in Melbourne, my parents are from Vietnam, my education to date is that I recently completed year 12 VCE in 2020, completed CERT III in Information Digital Technology and now studying Associate of Information Technology Pathway to Bachelor of Information Technology, I can speak English and Vietnamese. One fact that is interesting about me is I am hands on, meaning that apart from being on the computer I like to gardening. I have a pet goldfish as well and also like to go cycling.</p>
 
+    <h>Interest in IT</h1>
+
     <p>My interest in IT is hardware, networking aka cabling. My interest in IT started when I was in primary school during year 6. There was a particular person who sparked my interest, which was the IT repair man</p>
 
 
