--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
 <title>Brian Ho - ePortfolio</title>
 
 <meta name="viewport" content="width=device-width"/>
-<meta name="description" content="ePortfolio for Student Name."/>
+<meta name="description" content="ePortfolio for Brian Ho."/>
 <meta charset="UTF-8">
 
 <link type="text/css" rel="stylesheet" href="style.css">
@@ -26,10 +26,10 @@
 
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
-				<li>#: s1234567</li>
-				<li>e: <a href="mailto:student@rmit.edu.au" target="_blank">student@rmit.edu.au</a></li>
+				<li>#: s3898120</li>
+				<li>e: <a href="mailto:s3898120@student.rmit.edu.au" target="_blank">s3898120@student.rmit.edu.au</a></li>
 				<li>w: <a href="http://www.github.com">www.github.com/</a></li>
-				<li>m: +61 012 345 678</li>
+				<li>m: +61 041 673 489</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -43,7 +43,7 @@
 				</div>
 
 				<div class="sectionContent">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>I was born and raised in Melbourne, my parents are from Vietnam, my education to date is that I recently completed year 12 VCE in 2020, completed CERT III in Information Digital Technology and now studying Associate of Information Technology Pathway to Bachelor of Information Technology, I can speak English and Vietnamese. One fact that is interesting about me is I am hands on, meaning that apart from being on the computer I like to gardening. I have a pet goldfish as well and also like to go cycling</p>
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -56,7 +56,7 @@
 				</div>
 
 				<div class="sectionContent">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>My interest in IT is hardware, networking aka cabling. My interest in IT started when I was in primary school during year 6. There was a particular person who sparked my interest, which was the IT repair man.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
