--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
 				<li>#: s3898120</li>
 				<li>e: <a href="mailto:s3898120@student.rmit.edu.au" target="_blank">s3898120@student.rmit.edu.au</a></li>
 				<li>w: <a href="http://www.github.com">www.github.com/</a></li>
-				<li>m: +61 041 673 489</li>
+				<li>m: +61 0416 735 489</li>
 			</ul>
 		</div>
 		<div class="clear"></div>
@@ -43,7 +43,7 @@
 				</div>
 
 				<div class="sectionContent">
-					<p>I was born and raised in Melbourne, my parents are from Vietnam, my education to date is that I recently completed year 12 VCE in 2020, completed CERT III in Information Digital Technology and now studying Associate of Information Technology Pathway to Bachelor of Information Technology, I can speak English and Vietnamese. One fact that is interesting about me is I am hands on, meaning that apart from being on the computer I like to gardening. I have a pet goldfish as well and also like to go cycling</p>
+					<p>I was born and raised in Melbourne, completed my education in Melbourne, my parents heritage are from Vietnam, my education to date is that I recently completed year 12 VCE in 2020, completed CERT III in Information Digital Technology and now studying Associate of Information Technology Pathway to Bachelor of Information Technology, I can speak English and Vietnamese. One fact that is interesting about me is I am hands on, meaning that apart from being on the computer I like to gardening, fixing cars, lawn mowers, handyman maintance. I have a pet two goldfish which i kept for a few years already. My favourite sports activity is i like to go cycling because it makes me feel healthy. Ever since i was a child, i have been cycling.</p>
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -56,7 +56,7 @@
 				</div>
 
 				<div class="sectionContent">
-					<p>My interest in IT is hardware, networking aka cabling. My interest in IT started when I was in primary school during year 6. There was a particular person who sparked my interest, which was the IT repair man.</p>
+					<p>My interest in IT is hardware such as building computers, networking such as setting up routers, servers, consulting with other people, My interest in IT started when I was in primary school during year 6. There was a particular person who sparked my interest, which was the IT repair man. I started to have a interest in computers since i was in primary school. During 2010, i noticed that my primary school had new lenovo computers being installed throughout each classrooms. During that time, Windows 7 was a brand new operating system. When i first used the new computers, i was fascinated of how they functioned, the software and hardware used in the computers. During that period at home i had a desktop computer, it wasn't as good as the one at school, such as having windows xp compared to windows 7, intel pentium comapared to intel i5 and 1gb of ram compared to 4gb. </p>
 				</div>
 			</article>
 			<div class="clear"></div>
@@ -65,19 +65,22 @@
 		<section>
 			<div class="sectionTitle">
 				<h1>Ideal Job</h1>
+				<p> My ideal job would be something related to IT as i am studying a 3 year course on Bachelor of IT. The ideal job would be consulting as consulting involves talking to people. The reason why talking to people is important is because there needs to be an interaction between with human beings as being infront of a computer is not very good as you are looking at a machine, which doesnt have any feelings or emotions.
 			</div>
 
 			<div class="sectionContent">
 				<article>
 					<h2>Job Title</h2>
+					<p> IT Consultant/Developer </p>
+					<img src="job advert.jpg" alt="Seek Job advert" />
 					<h3>Description</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>IT consultant, developer role requiring skills in programming such as NET or SQL server. Working with different clients, range of different tasks required everyday</p>
 					<h3>Skills I have</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>The skills required for this role are knowing how to use NET or SQL server, being able to interact with clients on a day to day basis, written and spoken. Qualification required are software development or database related qualification i.e . Bachelor of Software Engineering or Computer Science.</p>
 					<h3>Skills I Need</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>The skills that I currently have are knowing basic programming, basic database concepts. These skills are the basic fundamentals, however i feel this is not enough, so i am dedicated to working harder to improve on my skills and knowledge. I am currently obtaining the Bachelor of Information Technology, which will be completed by the end of 2023. The skills that i really need is communication skills, advanced programming skills and software engineering skills.</p>
 					<h3>Learning Plan</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>A plan of how I will obtain the skills required is after completing my Bachelor of IT, I will need to complete an extra year of University in order to obtain the Bachelor of Computer Science. By doing so, i need to practice programming and database, in order to get my skills up to top notch.</p>
 				</article>
 
 			</div>
@@ -91,14 +94,14 @@
 
 			<div class="sectionContent">
 				<ul class="keySkills">
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
-					<li>A Key Skill</li>
+					<li>Communication Skills</li>
+					<li>Creative Thinking skills</li>
+					<li>Problem Solving Skills</li>
+					<li>Credibility Skills</li>
+					<li>Database knowledge skills</li>
+					<li>Reliability Skills</li>
+					<li>Programming Skills</li>
+					<li>Time managment skills</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
@@ -107,32 +110,33 @@
 		<section>
 			<div class="sectionTitle">
 				<h1>Personality Profile</h1>
-				<img src="gandalf.png" alt="Gandalf" />
+				<img src="Turbulent.jpg" alt="Turbulent Logistician" />
 			</div>
 
 			<div class="sectionContent">
 				<article>
-					<h2>Myers Briggs Type Indicator</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<h2>16 Personalities Test</h2>
+					<p>The 16 Personalities test also known as the Myer Briggs Test that i have conducted, shows that i am, introverted, which is correct, as i am a quiet person who likes to be alone. With the others such as obeservant, thinking, judging, and turbulent, i don't think i agreee with it as i am not a very judging person, i dont judge a book by its front cover, nor that i am a unstable person..</p>
 					<h3>Strengths</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
 					<h3>Weaknesses</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>My main weaknesses identified from this test is that i am suceptical to stress.</p>
 					<h3>Team Composition</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
-					<p><img src="mbti_results.png" alt="MBTI Results" /></p>
+					<p>The team composition resulted from this test shows that i am a very quiet person, who doesn't like to involve in social interactions, being individualistic. From what i can gather, this is true as i like to go away to a quiet area and do activties alone..</p>
+					<p><img src="test1.jpg" alt="Test1 Outcome" /></p>
 				</article>
 
 				<article>
 					<h2>Test Two</h2>
-					<p class="subDetails">Learning Preferences</p>
+					<p class="subDetails">Big Five Personality Test</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
 				</article>
 
 				<article>
 					<h2>Test Three</h2>
-					<p class="subDetails">Big 5 Factors</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p class="subDetails">Creativity Test</p>
+					<p>This test was conducted to show how creative my mind is. The results came back showing that my creativity is a work in progress. The results also recommended me to start forming group projects, in order to build and widen my creativity. </p>
+					<p><img src="creative.jpg" alt="Creativity Improvements" /></p>
 				</article>
 			</div>
 			<div class="clear"></div>
@@ -146,17 +150,17 @@
 			<div class="sectionContent">
 				<article>
 					<h2>Overview</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<p>For my project idea that i have developed, is an app that when other people text/call you, sends a replied message back letting them know that you're driving at the moment</p>
 				</article>
 
 				<article>
 					<h2>Motivation</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<p>The motivation of this idea started when my phone kept ringing while I am driving my car. As a probationary driver, I am not allowed use any hands free device nor use anything that can pick up my phone whilst driving. Full licensed drivers on the other hand can use the hands free device such as the Bluetooth or use their car radio to pick up the phone. Therefore I wanted to create an app that allows the phone to send out a message or voicemail that lets incoming calls know that I am driving the car. This can be useful as my parents call me wondering where I am and me unable to tell them because I am driving.</p>
 				</article>
 
 				<article>
 					<h2>Description</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p> um dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
 				</article>
 
 				<article>
@@ -166,12 +170,12 @@
 
 				<article>
 					<h2>Skills Required</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<p>The skills required to build this app that I am proposing is software development. Software development requires me to use mathematical knowledge, problem solving skills, the knowledge of the different types of languages, such as apple, android, linux, knowing how to use my time wisely, being able to pay attention to any bugs in the software. The feasibility of finding these skills are at the bare minimum at the moment for me as I am still in the learning phase of these. For me to learn this, it would take me time to study using such as Youtube or other materials out there as many other people have done in the past. The hardware is already there as people are using smart phones. .</p>
 				</article>
 
 				<article>
 					<h2>Outcome</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim.</p>
+					<p>If this project is successful it will allow myself and hundreds of probational drivers to send a automated message to let other people know that they are driving at the moment. It will also solve the temptation of the phone ringing, letting young drivers touch their phone which could cause a collision or a fatal incident. The original problem will be solved as any calls are diverted to this app and it will send out a message to who ever calls through letting them know that they are driving. This will have a detrimental impact as it is a breakthrough technology.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
