--- a/index1.html
+++ b/index1.html
@@ -165,7 +165,7 @@
 
 				<article>
 					<h2>Tools and Technologies</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p>The tools and technologies required to build this app for the amateur app developer which fits into my category is the “react native” by Facebook. The reason why I have chosen it is because firstly it is an open source development tool which means any body can use it without paying for the usage. Secondly react native uses javascript library for building user interfaces. This is also good, as I am currently learning further programming which teaches about javascript and java development which means that I will already have knowledge of it. Lastly react native is a multiuse frame work which supports ios, android, windows which is good as many phones uses that..</p>
 				</article>
 
 				<article>
