--- a/index1.html
+++ b/index1.html
@@ -129,7 +129,8 @@
 				<article>
 					<h2>Test Two</h2>
 					<p class="subDetails">Big Five Personality Test</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p><img src="bigfive.jpg" alt="Big five test Outcome" /></p>
+					<p>I have completed the big five personality test. This test tests the following, openness, conscientiousness, extraversion, agreeableness and neuroticism. So far from the results that i have received this test concludes that i am a tradiationlist, which means that i follow the tradional ways, not doing things in a different kind, i like to follow ways that older people have follow and no change. </p>
 				</article>
 
 				<article>
@@ -150,7 +151,7 @@
 			<div class="sectionContent">
 				<article>
 					<h2>Overview</h2>
-					<p>For my project idea that i have developed, is an app that when other people text/call you, sends a replied message back letting them know that you're driving at the moment</p>
+					<p>For my project idea that i have developed, is an app that when other people text/call you, sends a replied message back letting them know that you're driving at the moment. For this project intend this proposed user type will be young people aged between 18-24 years old as they will typically living a home with parents. Parents often call to ask where their child is, however they could be behind the wheel unable to pickup the phone by all means. This can result in a worrying condition as the parents try to call many times but they don’t pick up the phone or it goes into voicemail..</p>
 				</article>
 
 				<article>
@@ -160,7 +161,7 @@
 
 				<article>
 					<h2>Description</h2>
-					<p> um dolor sit amet, consectetur adipiscing elit. Integer dolor metus, interdum at scelerisque in, porta at lacus. Maecenas dapibus luctus cursus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<p> For this app to be developed, I intend to use react native by Facebook as I find it is a good open sourced developer for amateurs. An app name that I would call this app is Deworrying as the name suggests for parents to stop worrying where their child is at the moment. I intend to make the app run on ios 11 or later android 9 or later. As this is a medium to moderate memory using app, I would suggest this app to use 512mb or ram and 1gb of storage in order to the app to run. This app would use java frame work as well.</p>
 				</article>
 
 				<article>
