--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="photo" class="quickFade">
-			<img src="photo.jpg" alt="Brian Ho" />
+			<img src="photo.JPG" alt="Brian Ho" />
 		</div>
 
 		<div id="name">
