--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<article>
 					<h2>Job Title</h2>
 					<p> IT Consultant/Developer </p>
-					<img src="job advert.jpg" alt="Seek Job advert" />
+					<img src="job advert.JPG" alt="Seek Job advert" />
 					<h3>Description</h3>
 					<p>IT consultant, developer role requiring skills in programming such as NET or SQL server. Working with different clients, range of different tasks required everyday</p>
 					<h3>Skills I have</h3>
@@ -110,7 +110,7 @@
 		<section>
 			<div class="sectionTitle">
 				<h1>Personality Profile</h1>
-				<img src="Turbulent.jpg" alt="Turbulent Logistician" />
+				<img src="Turbulent.JPG" alt="Turbulent Logistician" />
 			</div>
 
 			<div class="sectionContent">
@@ -123,13 +123,13 @@
 					<p>My main weaknesses identified from this test is that i am suceptical to stress.</p>
 					<h3>Team Composition</h3>
 					<p>The team composition resulted from this test shows that i am a very quiet person, who doesn't like to involve in social interactions, being individualistic. From what i can gather, this is true as i like to go away to a quiet area and do activties alone..</p>
-					<p><img src="test1.jpg" alt="Test1 Outcome" /></p>
+					<p><img src="test1.JPG" alt="Test1 Outcome" /></p>
 				</article>
 
 				<article>
 					<h2>Test Two</h2>
 					<p class="subDetails">Big Five Personality Test</p>
-					<p><img src="bigfive.jpg" alt="Big five test Outcome" /></p>
+					<p><img src="bigfive.JPG" alt="Big five test Outcome" /></p>
 					<p>I have completed the big five personality test. This test tests the following, openness, conscientiousness, extraversion, agreeableness and neuroticism. So far from the results that i have received this test concludes that i am a tradiationlist, which means that i follow the tradional ways, not doing things in a different kind, i like to follow ways that older people have follow and no change. </p>
 				</article>
 
@@ -137,7 +137,7 @@
 					<h2>Test Three</h2>
 					<p class="subDetails">Creativity Test</p>
 					<p>This test was conducted to show how creative my mind is. The results came back showing that my creativity is a work in progress. The results also recommended me to start forming group projects, in order to build and widen my creativity. </p>
-					<p><img src="creative.jpg" alt="Creativity Improvements" /></p>
+					<p><img src="creative.JPG" alt="Creativity Improvements" /></p>
 				</article>
 			</div>
 			<div class="clear"></div>
