--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				<article>
 					<h2>Test Two</h2>
 					<p class="subDetails">Big Five Personality Test</p>
-					<p><img src="bigfive.JPG" alt="Big five test Outcome" /></p>
+					<p><img src="Bigfive.JPG" alt="Big five test Outcome" /></p>
 					<p>I have completed the big five personality test. This test tests the following, openness, conscientiousness, extraversion, agreeableness and neuroticism. So far from the results that i have received this test concludes that i am a tradiationlist, which means that i follow the tradional ways, not doing things in a different kind, i like to follow ways that older people have follow and no change. </p>
 				</article>
 
